<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>xyz.earthcow.networkjoinmessages</groupId>
    <artifactId>NetworkJoinMessages</artifactId>
    <!-- Version is used in plugin.yml -->
     <version>2.3.2^dev</version>
    <!--<version>dev+${revision}</version>--><!-- To be used with (replace x's) mvn clean package -Drevision=xxx -->
    <packaging>jar</packaging>

    <!-- Plugin Information -->
    <!-- Name, Description, and URL are used in plugin.yml -->
    <name>NetworkJoinMessages</name>
    <description>A plugin handling join, leave and switch messages for proxy servers.</description>
    <url>https://github.com/RagingTech/NetworkJoinMessages</url>

    <inceptionYear>2021</inceptionYear>

    <licenses>
        <license>
            <name>Zlib</name>
            <url>https://www.zlib.net/zlib_license.html</url>
            <comments>A permissive, easy-to-understand software license.</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Tirco</name>
            <url>http://tirco.tv</url>
        </developer>
        <developer>
            <name>EarthCow</name>
            <url>https://earthcow.xyz</url>
        </developer>
    </developers>

    <properties>
        <!--  Author and MainClass are used in plugin.yml -->
        <author>Tirco and EarthCow</author>
        <mainClass>xyz.earthcow.networkjoinmessages.bungee.general.BungeeMain</mainClass>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <revision>SNAPSHOT</revision>
    </properties>

    <repositories>
        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>william278-releases</id>
            <name>William278</name>
            <url>https://repo.william278.net/releases/</url>
        </repository>
        <repository>
            <id>elytrium-repo</id>
            <url>https://maven.elytrium.net/repo/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- bStats -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bungeecord</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-velocity</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-api</artifactId>
            <version>1.21-R0.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.velocitypowered</groupId>
            <artifactId>velocity-api</artifactId>
            <version>3.4.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Velocity for LimboAPI -->
        <dependency>
            <groupId>com.velocitypowered</groupId>
            <artifactId>velocity-proxy</artifactId>
            <version>3.4.0-SNAPSHOT</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.velocitypowered</groupId>
                    <artifactId>velocity-proxy-log4j2-plugin</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>16.0.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.2.224</version>
        </dependency>
        <!-- PremiumVanishAPI -->
        <dependency>
    		<groupId>com.github.LeonMangler</groupId>
    		<artifactId>PremiumVanishAPI</artifactId>
            <version>2.9.18-2</version>
            <scope>provided</scope>
  		</dependency>
        <!-- PAPIProxyBridge -->
        <dependency>
            <groupId>net.william278</groupId>
            <artifactId>papiproxybridge</artifactId>
            <version>1.8</version>
            <scope>provided</scope>
        </dependency>
        <!-- LuckPermsAPI -->
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.4</version>
            <scope>provided</scope>
        </dependency>
        <!-- BungeeCord Adventure Adapter -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bungeecord</artifactId>
            <version>4.3.4</version>
        </dependency>
        <!-- MiniMessage -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.19.0</version>
        </dependency>
        <!-- MiniPlaceholders -->
        <dependency>
            <groupId>io.github.miniplaceholders</groupId>
            <artifactId>miniplaceholders-api</artifactId>
            <version>2.3.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- Plain Text Serializer -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-plain</artifactId>
            <version>4.19.0</version>
        </dependency>
        <!-- BoostedYAML -->
        <dependency>
            <groupId>dev.dejvokep</groupId>
            <artifactId>boosted-yaml</artifactId>
            <version>1.3.6</version>
        </dependency>
        <dependency>
            <groupId>com.github.EarthCow</groupId>
            <artifactId>JavaDiscordWebhook</artifactId>
            <version>1.2.0</version>
        </dependency>
        <!-- JUnit -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>6.0.0-M1</version>
            <scope>test</scope>
        </dependency>
        <!-- Mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.18.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <defaultGoal>clean package</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <!-- Surefire Plugin for Tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <release>21</release>
                </configuration>
            </plugin>

            <!-- Shade Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>xyz.earthcow.networkjoinmessages.libs.bstats</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>dev.dejvokep.boostedyaml</pattern>
                            <shadedPattern>xyz.earthcow.networkjoinmessages.libs.boostedyaml</shadedPattern>
                        </relocation>
                    </relocations>
                    <artifactSet>
                        <excludes>
                            <exclude>io.github.miniplaceholders:miniplaceholders-api</exclude>
                        </excludes>
                    </artifactSet>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>
